Fix editing text flakiness introduced in r209411 https://bugs.webkit.org/show_bug.cgi?id=165500

Reviewed by Dean Jackson.

The "insideFixed" out param was left uninitialized sometimes. This affected FrameSelection's
m_caretInsidePositionFixed, which caused problems in these tests.

Tested by editing tests in WK1.

* editing/htmlediting.cpp:
(WebCore::absoluteBoundsForLocalCaretRect):

Canonical link: https://commits.webkit.org/183103@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209436 268f45cc-cd09-0410-ab3c-d52691b4dbfc